// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders all markers 1`] = `
<Markers
  details={
    <Relay(FlagDetailsContainer)
      comment={
        Object {
          "revision": Object {
            "actionCounts": Object {
              "flag": Object {
                "reasons": Object {
                  "COMMENT_DETECTED_BANNED_WORD": 1,
                  "COMMENT_DETECTED_LINKS": 1,
                  "COMMENT_DETECTED_SPAM": 1,
                  "COMMENT_DETECTED_SUSPECT_WORD": 1,
                  "COMMENT_DETECTED_TOXIC": 1,
                  "COMMENT_DETECTED_TRUST": 1,
                  "COMMENT_REPORTED_OFFENSIVE": 2,
                  "COMMENT_REPORTED_SPAM": 3,
                },
              },
            },
            "metadata": Object {
              "perspective": Object {
                "score": 0,
              },
            },
          },
          "status": "PREMOD",
        }
      }
      settings={
        Object {
          "integrations": Object {
            "perspective": Object {
              "threshold": 0.8,
            },
          },
        }
      }
    />
  }
>
  <Localized
    id="moderate-marker-preMod"
  >
    <withPropsOnChange(Marker)
      color="primary"
    >
      Pre-Mod
    </withPropsOnChange(Marker)>
  </Localized>
  <Localized
    id="moderate-marker-link"
  >
    <withPropsOnChange(Marker)
      color="primary"
    >
      Link
    </withPropsOnChange(Marker)>
  </Localized>
  <Localized
    id="moderate-marker-bannedWord"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Banned Word
    </withPropsOnChange(Marker)>
  </Localized>
  <Localized
    id="moderate-marker-suspectWord"
  >
    <withPropsOnChange(Marker)
      color="error"
      variant="filled"
    >
      Suspect Word
    </withPropsOnChange(Marker)>
  </Localized>
  <Localized
    id="moderate-marker-spam"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Spam
    </withPropsOnChange(Marker)>
  </Localized>
  <Localized
    id="moderate-marker-toxic"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Toxic
    </withPropsOnChange(Marker)>
  </Localized>
  <Localized
    id="moderate-marker-karma"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Karma
    </withPropsOnChange(Marker)>
  </Localized>
  <withPropsOnChange(Marker)
    color="error"
  >
    <Localized
      id="moderate-marker-offensive"
    >
      <span>
        Offensive
      </span>
    </Localized>
     
    <withPropsOnChange(Count)>
      2
    </withPropsOnChange(Count)>
  </withPropsOnChange(Marker)>
  <withPropsOnChange(Marker)
    color="error"
  >
    <Localized
      id="moderate-marker-spam"
    >
      <span>
        Spam
      </span>
    </Localized>
     
    <withPropsOnChange(Count)>
      3
    </withPropsOnChange(Count)>
  </withPropsOnChange(Marker)>
</Markers>
`;

exports[`renders some markers 1`] = `
<Markers
  details={
    <Relay(FlagDetailsContainer)
      comment={
        Object {
          "revision": Object {
            "actionCounts": Object {
              "flag": Object {
                "reasons": Object {
                  "COMMENT_DETECTED_BANNED_WORD": 1,
                  "COMMENT_DETECTED_LINKS": 0,
                  "COMMENT_DETECTED_SPAM": 0,
                  "COMMENT_DETECTED_SUSPECT_WORD": 0,
                  "COMMENT_DETECTED_TOXIC": 1,
                  "COMMENT_DETECTED_TRUST": 1,
                  "COMMENT_REPORTED_OFFENSIVE": 2,
                  "COMMENT_REPORTED_SPAM": 0,
                },
              },
            },
            "metadata": Object {
              "perspective": Object {
                "score": 1,
              },
            },
          },
          "status": "PREMOD",
        }
      }
      settings={
        Object {
          "integrations": Object {
            "perspective": Object {
              "threshold": 0.8,
            },
          },
        }
      }
    />
  }
>
  <Localized
    id="moderate-marker-preMod"
  >
    <withPropsOnChange(Marker)
      color="primary"
    >
      Pre-Mod
    </withPropsOnChange(Marker)>
  </Localized>
  <Localized
    id="moderate-marker-bannedWord"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Banned Word
    </withPropsOnChange(Marker)>
  </Localized>
  <Localized
    id="moderate-marker-toxic"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Toxic
    </withPropsOnChange(Marker)>
  </Localized>
  <Localized
    id="moderate-marker-karma"
  >
    <withPropsOnChange(Marker)
      color="error"
    >
      Karma
    </withPropsOnChange(Marker)>
  </Localized>
  <withPropsOnChange(Marker)
    color="error"
  >
    <Localized
      id="moderate-marker-offensive"
    >
      <span>
        Offensive
      </span>
    </Localized>
     
    <withPropsOnChange(Count)>
      2
    </withPropsOnChange(Count)>
  </withPropsOnChange(Marker)>
</Markers>
`;
